Fix white space at bottom

--- a/client/public/style/style.css
+++ b/client/public/style/style.css
@@ -14,6 +14,11 @@ body {
   height: 100%;
 }
 
+#navBar {
+  width: 100%;
+  height: 10%;
+}
+
 .greeting {
   margin: 0 auto;
   text-align: center;
@@ -31,7 +36,7 @@ body {
 
 #landingPage {
   text-align: center;
-  height: 90%;
+  height: 100%;
   width: 100%;
   background: url(/assets/background_500.png) repeat center bottom;
 }
@@ -491,7 +496,7 @@ input:invalid {
 }
 
 .child {
-  height: 100%;
+  height: 90%;
   margin: 0 auto;
 }
 
